--- a/app/src/main/res/layout/view_holder_currency_rate.xml
+++ b/app/src/main/res/layout/view_holder_currency_rate.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
                 name="currencyRateItem"
-                type="com.chrischen.currencyconversion.adapter.MainAdapter.CurrencyRateItem"/>
+                type="com.chrischen.currencyconversion.adapter.MainAdapter.Item.CurrencyRateItem"/>
 
     </data>
 
