--- a/app/src/main/res/layout/view_holder_top.xml
+++ b/app/src/main/res/layout/view_holder_top.xml
@@ -23,7 +23,7 @@
             android:hint="@string/amount_hint"
             app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editCurrencyEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
