--- a/app/src/main/res/layout/view_holder_top.xml
+++ b/app/src/main/res/layout/view_holder_top.xml
@@ -27,7 +27,8 @@
                 android:id="@+id/editCurrencyEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
+                android:digits="0123456789."
                 android:maxLines="1"
                 android:textSize="@dimen/font_large" />
         </com.google.android.material.textfield.TextInputLayout>
