--- a/app/src/main/res/layout/view_holder_top.xml
+++ b/app/src/main/res/layout/view_holder_top.xml
@@ -34,6 +34,39 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/encryptionTextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/round_border_blue"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/encryption"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/font_large"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintDimensionRatio="W, 1:3"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintWidth_percent="0.3" />
+
+        <TextView
+            android:id="@+id/decryptionTextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/round_border_green"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/decryption"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/font_large"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/encryptionTextView"
+            app:layout_constraintEnd_toStartOf="@id/selectCurrencyTextView"
+            app:layout_constraintDimensionRatio="W, 1:3"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+            app:layout_constraintWidth_percent="0.3" />
+
+        <TextView
             android:id="@+id/selectCurrencyTextView"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -49,7 +82,7 @@
             app:layout_constraintDimensionRatio="W, 1:3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-            app:layout_constraintWidth_percent="0.4"
+            app:layout_constraintWidth_percent="0.3"
             tools:text="USD" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
